--- a/About.html
+++ b/About.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -8,8 +7,8 @@
     </head>
     <body>
         <p>Welcome to our Website</p>
-        <h1><link rel="stylesheet" href="Home">Home</h1>
-        <h1><link rel="stylesheet" href="About">About</h1>
+        <h1><link rel="stylesheet" href="./index.html">Home</h1>
+        <h1><link rel="stylesheet" href="/index.html">About</h1>
         <h1><link rel="stylesheet" href="Contact">Contact</h1>
         <h1><link rel="stylesheet" href="Services">Services</h1>
     </body>
