--- a/About.html
+++ b/About.html
@@ -6,10 +6,12 @@
         <title></title>
     </head>
     <body>
-        <p>Welcome to our Website</p>
-        <h1><link rel="stylesheet" href="./index.html">Home</h1>
-        <h1><link rel="stylesheet" href="/index.html">About</h1>
-        <h1><link rel="stylesheet" href="Contact">Contact</h1>
-        <h1><link rel="stylesheet" href="Services">Services</h1>
+        <p>Welcome to HomePage</p>
+        <div class="content">
+            <a href="./home">Home</a>
+            <a href="/about">About</a>
+            <a href="./contact">Contact</a>
+            <a href="./services">Services</a>
+        </div>
     </body>
 </html>
