--- a/Contact.html
+++ b/Contact.html
@@ -7,9 +7,11 @@
     </head>
     <body>
         <p>Welcome to our Website</p>
-        <h1><link rel="stylesheet" href="Home">Home</h1>
-        <h1><link rel="stylesheet" href="About">About</h1>
-        <h1><link rel="stylesheet" href="Contact">Contact</h1>
-        <h1><link rel="stylesheet" href="Services">Services</h1>
+       <div class="content">
+            <a href="./home">Home</a>
+            <a href="./about">About</a>
+            <a href="/contact">Contact</a>
+            <a href="./services">Services</a>
+        </div>
     </body>
 </html>
