--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>website</title>
+        <link rel="stylesheet" href="/style/style.css">
     </head>
     <body>
         <p>Welcome to our Website</p>
-        <h1><link rel="stylesheet" href="Home">Home</h1>
-        <h1><link rel="stylesheet" href="About">About</h1>
-        <h1><link rel="stylesheet" href="Contact">Contact</h1>
-        <h1><link rel="stylesheet" href="Services">Services</h1>
+        <div class="content">
+            <a href="home">Home</a>
+            <a href="about">About</a>
+            <a href="contact">Contact</a>
+            <a href="services">Services</a>
+        </div>
     </body>
 </html>
