--- a/Services.html
+++ b/Services.html
@@ -6,7 +6,7 @@
         <title></title>
     </head>
     <body>
-        <p>Welcome to our Website</p>
+        <p>Welcome to our Services</p>
        <div class="content">
             <a href="./home">Home</a>
             <a href="./about">About</a>
