--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
         <title></title>
     </head>
     <body>
-        <p>Welcome to our Website</p>
+        <h1>Welcome to Home Page</h1>
         <div class="content">
             <a href="/home">Home</a>
             <a href="./about">About</a>
