--- a/Contact.html
+++ b/Contact.html
@@ -13,5 +13,6 @@
             <a href="/contact">Contact</a>
             <a href="./services">Services</a>
         </div>
+        img
     </body>
 </html>
