--- a/Contact.html
+++ b/Contact.html
@@ -3,16 +3,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
+        <title>contactpage</title>
+        <link rel="stylesheet" href="/style/style Contact.css">
     </head>
     <body>
-        <p>Welcome to our Website</p>
+        <h1>Welcome to Contact</h1>
        <div class="content">
-            <a href="./home">Home</a>
-            <a href="./about">About</a>
-            <a href="/contact">Contact</a>
-            <a href="./services">Services</a>
+            <a href="./Home.html">Home</a>
+            <a href="./About.html">About</a>
+            <a href="/Contact.html">Contact</a>
+            <a href="./Services.html">Services</a>
         </div>
-        img
+        <p>this is our content if you want to know abou our information </p>
     </body>
 </html>
