--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <p>Welcome to our Website</p>
         <div class="content">
-            <a href="home">Home</a>
-            <a href="about">About</a>
-            <a href="contact">Contact</a>
-            <a href="services">Services</a>
+            <a href="./Home.html">Home</a>
+            <a href="About.html">About</a>
+            <a href="Contact.html">Contact</a>
+            <a href="Services.html">Services</a>
         </div>
     </body>
 </html>
