--- a/Contact.html
+++ b/Contact.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" href="/style/style Contact.css">
     </head>
     <body>
-        <h1>Welcome to Contact</h1>
-       <div class="content">
+        <h1>Welcome to Contact​ page</h1>
+       <!-- <div class="content">
             <a href="./Home.html">Home</a>
             <a href="./About.html">About</a>
             <a href="/Contact.html">Contact</a>
             <a href="./Services.html">Services</a>
         </div>
-        <p>this is our content if you want to know abou our information </p>
+        <p>this is our content if you want to know abou our information </p> -->
     </body>
 </html>
