--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
         <link rel="stylesheet" href="./style/style index.css">
     </head>
     <body>
-        <p>Welcome to our Website</p>
-        <div class="content">
+        <div class="container">
+            <div class="content">
             <a href="./Home.html">Home</a>
             <a href="About.html">About</a>
             <a href="Contact.html">Contact</a>
             <a href="Services.html">Services</a>
         </div>
+        </div>
+        <p>Welcome to our Website</p>
+        
     </body>
 </html>
