--- a/About.html
+++ b/About.html
@@ -8,12 +8,14 @@
     </head>
     <body>
         <h1>Welcome to About Page</h1>
-        <div class="content">
+        <!-- <div class="content">
             <a href="./Home.html">Home</a>
             <a href="/About.html">About</a>
             <a href="./Contact.html">Contact</a>
             <a href="./Services.html">Services</a>
+        </div> -->
+        <div class="container">
+            <div ></div>
         </div>
-        <h1>Wellcome to About</h1>
     </body>
 </html>
