--- a/Home.html
+++ b/Home.html
@@ -8,11 +8,11 @@
     </head>
     <body>
         <h1>Welcome to Home Page</h1>
-        <div class="content">
+        <!-- <div class="content">
             <a href="./Home.html">Home</a>
             <a href="./About.html">About</a>
             <a href="./Contact.html">Contact</a>
             <a href="./Services.html">Services</a>
-        </div>
+        </div> -->
     </body>
 </html>
