--- a/Services.html
+++ b/Services.html
@@ -8,11 +8,23 @@
     </head>
     <body>
         <h1>Welcome to Services Page</h1>
-       <!-- <div class="content">
-            <a href="./Home.html">Home</a>
-            <a href="./About.html">About</a>
-            <a href="./Contact.html">Contact</a>
-            <a href="/Services.html">Services</a>
-        </div> -->
+            <section class="services">
+        <h2>Our Services</h2>
+            <div class="service-card">
+        <h3>Web Development</h3>
+            <p>We build responsive and modern websites using HTML, CSS, and JavaScript.</p>
+        </div>
+            <div class="service-card">
+        <h3>Graphic Design</h3>
+            <p>We design logos, posters, and social media graphics with professional tools.</p>
+        </div>
+            <div class="service-card">
+        <h3>Tech Support</h3>
+            <p>24/7 customer support to help you with your software and system issues.</p>
+            </div>
+        </section>
+        <footer>
+        <p>Contact us: info@example.com | &copy; 2025 My Website</p>
+        </footer>
     </body>
 </html>
