--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         </div>
         <p>Welcome to our Website</p>
+        <img src="./image.png" alt="">
         
     </body>
 </html>
