--- a/Contact.html
+++ b/Contact.html
@@ -7,13 +7,19 @@
         <link rel="stylesheet" href="/style/style Contact.css">
     </head>
     <body>
-        <h1>Welcome to Contact​ page</h1>
-       <!-- <div class="content">
-            <a href="./Home.html">Home</a>
-            <a href="./About.html">About</a>
-            <a href="/Contact.html">Contact</a>
-            <a href="./Services.html">Services</a>
-        </div>
-        <p>this is our content if you want to know abou our information </p> -->
+        <h1>Welcome to Contact page</h1>
+       <section class="contact">
+        <h2>Contact Us</h2>
+        <p>Email: Momo@123.com</p>
+        <p>Phone: +855 12 345 678</p>
+        <p>Address: street 371, Phnom Penh, Cambodia</p>
+
+        <form action="#" method="POST">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+        </section>
     </body>
 </html>
