--- a/Services.html
+++ b/Services.html
@@ -24,7 +24,7 @@
             </div>
         </section>
         <footer>
-        <p>Contact us: info@example.com | &copy; 2025 My Website</p>
+        <p>Contact us: Momo123.com | &copy; 2025 My Website</p>
         </footer>
     </body>
 </html>
