--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./style/style index.css">
     </head>
     <body>
+        <marquee behavior="direction" direction="left">Welcome to our website Glow on to update our website thank you for support​ our product.</marquee>
         <div class="container">
             <div class="content">
             <a href="./Home.html">Home</a>
