--- a/index.html
+++ b/index.html
@@ -17,8 +17,24 @@
             <a href="Services.html">Services</a>
         </div>
         </div>
+        <div class="Box">
+            <div class="Pink">Pink App</div>
+            <div class="Personal">Personal</div>
+            <div class="service">Service</div>
+            <div class="Support">Support</div>
+
+        </div>
         <p>Welcome to our Website</p>
         <img src="./image.png" alt="">
-        
+        <div class="card">
+            <img src="./1.avif" alt="">
+            
+        </div>
+        <!-- <div class="card">
+            <div><img src="" alt=""></div>
+        </div>
+        <div class="card">
+            <img-1 src="./3.webp" alt="">
+        </div> -->
     </body>
 </html>
