--- a/About.html
+++ b/About.html
@@ -7,7 +7,12 @@
         <link rel="stylesheet" href="/style/style About.css">
     </head>
     <body>
+        <div class="baby">
+        <marquee behavior="direction" direction="left">Our range of skin care products cleanses, treats, moisturizes, & protects with results-driven formulas & powerful ingredients. Thirsty ..</marquee>
+        </div>
+        <div class="bb">
         <h1>Welcome to About Page</h1>
+        </div>
         <!-- <div class="content">
             <a href="./Home.html">Home</a>
             <a href="/About.html">About</a>
@@ -15,7 +20,24 @@
             <a href="./Services.html">Services</a>
         </div> -->
         <div class="container">
-            <div ></div>
+           <div class="skin-care">
+            <img src="./image/file.jpg" alt="">
+            <div class="Tbb">
+                <button class="btn ms mm">skin-care</button>
+                <button class="btn ms">all-skin</button>
+                <button class="btn">+</button>
+            </div>
+            <div claas="price">
+                <span><strong>1 Set</strong></span>
+                <span><strong>100$</strong></span>
+            </div>
+            <div class="q">
+                <p class="">Our range of skin care products cleanses, treats, moisturizes, & protects with results-driven formulas & powerful ingredients. Thirsty ...</p>
+            </div>        
+            <div class="ns">
+            <button class="btn ">Add product</button>
+            </div>  
+           </div>
         </div>
     </body>
 </html>
