--- a/Home.html
+++ b/Home.html
@@ -7,12 +7,28 @@
         <link rel="stylesheet" href="/style/style Home.css">
     </head>
     <body>
-        <h1>Welcome to Home Page</h1>
+        
         <!-- <div class="content">
             <a href="./Home.html">Home</a>
             <a href="./About.html">About</a>
             <a href="./Contact.html">Contact</a>
             <a href="./Services.html">Services</a>
         </div> -->
+
+        <div class="flex1">
+            <h1>Welcome to Home Page</h1>    
+        </div>
+        <div class="flex2">
+            <img src="./4.webp" alt="">
+            <img src="./2.avif" alt="">
+            <img src="./3.webp" alt="">
+        </div>
+        <p>Tree Hut Shea Sugar Scrub - Pink Hibiscus </p>
+        <div class="flex-3">
+            <img src="./pka 1.jpg" alt="">
+            <img src="./pka 2.jfif" alt="">
+            <img src="./pka3.jfif" alt="">
+        </div>
+        <p> Hero Image Phka Product Tirk Dos $10. Add to Bag. Product </p>    
     </body>
 </html>
