--- a/index.html
+++ b/index.html
@@ -26,15 +26,6 @@
         </div>
         <p>Welcome to our Website</p>
         <img src="./image.png" alt="">
-        <div class="card">
-            <img src="./1.avif" alt="">
-            
-        </div>
-        <!-- <div class="card">
-            <div><img src="" alt=""></div>
-        </div>
-        <div class="card">
-            <img-1 src="./3.webp" alt="">
-        </div> -->
+        <div></div>
     </body>
 </html>
